# fetch-news-mcp

./: README.md  main.py  mcp_app.py  pyproject.toml  summary_report.json  temp.txt
