[project]
name = "fetch-sea-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastmcp>=2.13.1",
    "openai>=2.8.1",
    "requests>=2.32.5",
]

[project.scripts]
# 命令名 = "模块名:函数名"
fetch-news = "mcp_app:main"

[tool.setuptools]
py-modules = ["main", "mcp_app"]
